--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <li>спать</li>
   <li>кушать</li>
 </ul>
-
+<b>я такий же жирний як ці букви</b>
+<i>незнаю що тут написати</i>
 <a href="https://www.instagram.com/" target="_blank">Мій улюблений сайт</a>
 </body>
 </html> 
